Delete path and consistent clean, refactor Function (I50).