@@ -69,6 +69,13 @@
       <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+		<configuration>
+		  <argLine>
+		    --add-opens java.base/java.lang=ALL-UNNAMED
+		    --add-reads common.config=ALL-UNNAMED
+		    --add-reads common.model=ALL-UNNAMED
+		  </argLine>
+		</configuration>
       </plugin>
       <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
